WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94679
WebCore scrolling thread leaks objects due to them being autoreleased without any autorelease pool in place
https://bugs.webkit.org/show_bug.cgi?id=94679
Summary
WebCore scrolling thread leaks objects due to them being autoreleased without...
Mark Rowe (bdash)
Reported
2012-08-22 01:35:31 PDT
I've noticed a few times recently messages from the Objective-C runtime about autoreleased objects being leaked due to there being no autorelease pool in place. In a debugger I determined that the objects in question are allocated on the WebCore scrolling thread from within AppKit. The ScrollingThread class does not appear to set up any autorelease pool for code that is called by its runloop source.
Attachments
Patch v1
(2.04 KB, patch)
2012-08-22 01:37 PDT
,
Mark Rowe (bdash)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2012-08-22 01:37:21 PDT
Created
attachment 159880
[details]
Patch v1
WebKit Review Bot
Comment 2
2012-08-22 11:59:47 PDT
Comment on
attachment 159880
[details]
Patch v1 Clearing flags on attachment: 159880 Committed
r126326
: <
http://trac.webkit.org/changeset/126326
>
WebKit Review Bot
Comment 3
2012-08-22 11:59:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug