<http://webkit.org/b/94679> WebCore scrolling thread leaks objects due to them being autoreleased without any autorelease pool in place

Reviewed by Dan Bernstein.

* page/scrolling/mac/ScrollingThreadMac.mm:
(WebCore::ScrollingThread::threadRunLoopSourceCallback): Ensure that an autorelease pool is in place when
dispatching functions on the scrolling thread.


git-svn-id: svn://svn.chromium.org/blink/trunk@126326 bbb929c8-8fbe-4397-9dbb-9b2b20218538