third_party/WebKit/Source/WebCore/page/scrolling/mac/ScrollingThreadMac.mm
@@ -64,7 +64,9 @@ void ScrollingThread::threadRunLoopSourceCallback(void* scrollingThread)
 
 void ScrollingThread::threadRunLoopSourceCallback()
 {
+    NSAutoreleasePool *pool = [[NSAutoreleasePool alloc] init];
     dispatchFunctionsFromScrollingThread();
+    [pool drain];
 }
 
 } // namespace WebCore
